--- a/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
+++ b/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
@@ -66,19 +66,19 @@
             <ion-col>
               <ion-item>
                 <ion-label position="stacked">{{ 'name' | translate}}</ion-label>
-                <ion-input type="text" formControlName="{{part.id}}-name" value="{{part.name}}"></ion-input>
+                <ion-input type="text" formControlName="part-{{part.id}}-name" value="{{part.name}}"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col>
               <ion-item>
                 <ion-label position="stacked">{{ 'description' | translate}}</ion-label>
-                <ion-input type="text" formControlName="{{part.id}}-desc" value="{{part.description}}"></ion-input>
+                <ion-input type="text" formControlName="part-{{part.id}}-description" value="{{part.description}}"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col>
               <ion-item>
                 <ion-label position="stacked">{{ 'OS' | translate}}</ion-label>
-                <ion-select type="text" formControlName="{{part.id}}-os" [compareWith]="objectService.compareFn">
+                <ion-select type="text" formControlName="part-{{part.id}}-os" [compareWith]="objectService.compareFn">
                 <ion-select-option *ngFor="let os of  operatingSystems" value="{{os}}">{{os}}</ion-select-option>
                 </ion-select>
               </ion-item>
@@ -86,7 +86,7 @@
             <ion-col>
               <ion-item>
                 <ion-label position="stacked">{{'joinType' | translate}}</ion-label>
-                <ion-select type="text" formControlName="{{part.id}}-join" [compareWith]="objectService.compareFn">
+                <ion-select type="text" formControlName="part-{{part.id}}-joinType" [compareWith]="objectService.compareFn">
                 <ion-select-option *ngFor="let join of  joinTypes" value="{{join}}">{{join}}</ion-select-option>
               </ion-select>
               </ion-item>
@@ -94,7 +94,7 @@
             <ion-col>
               <ion-item>
                 <ion-label position="stacked">{{'cloneTool' | translate}}</ion-label>
-                <ion-select type="text" formControlName="{{part.id}}-tool" [compareWith]="objectService.compareFn">
+                <ion-select type="text" formControlName="part-{{part.id}}-tool" [compareWith]="objectService.compareFn">
                 <ion-select-option *ngFor="let tool of  tools" value="{{tool}}">{{tool}}</ion-select-option>
               </ion-select>
             </ion-item>
