Implementing institute status. Fix ag-action-renderer use ionic-button

--- a/src/app/protected/cephalix/institutes/details/institute-details.page.html
+++ b/src/app/protected/cephalix/institutes/details/institute-details.page.html
@@ -9,7 +9,7 @@
   
       <ion-tab-button tab="synced-objects">
         <ion-icon name="code-working"></ion-icon>
-        <ion-label>{{ 'synced-objects' | translate}}</ion-label>
+        <ion-label>{{ 'synced objects' | translate}}</ion-label>
       </ion-tab-button>
   
       <ion-tab-button tab="notices">
