Implementing status overwiev of institutes. Fix layout of editing an object. Enhance translation. Make tool bar smaller.

--- a/src/app/protected/cephalix/institutes/details/institute-details.page.html
+++ b/src/app/protected/cephalix/institutes/details/institute-details.page.html
@@ -7,6 +7,11 @@
         <ion-label>{{ 'edit' | translate}}</ion-label>
       </ion-tab-button>
   
+      <ion-tab-button tab="status">
+        <ion-icon name="stats-chart"></ion-icon>
+        <ion-label>{{ 'Status' | translate}}</ion-label>
+      </ion-tab-button>
+
       <ion-tab-button tab="synced-objects">
         <ion-icon name="code-working"></ion-icon>
         <ion-label>{{ 'synced objects' | translate}}</ion-label>
