--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -3,7 +3,7 @@
     <ion-title>edit</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-row class="ion-header">
+<ion-row class="header-row">
   <ion-col size=12>
     <ion-title>{{ 'Modify members of selected group' | translate}}: "{{group.name}}" {{group.description}}
       {{group.groupType | translate}}
