--- a/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
+++ b/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
@@ -4,15 +4,48 @@
   </ion-toolbar>
 </ion-header>
 <ion-row class="header-row">
-  <ion-col size=12>
+  <ion-col size=6>
     <ion-title>{{ 'Modify selected institute:' | translate}} "{{object.name}}"</ion-title>
   </ion-col>
+  <ion-col size=3></ion-col>
+
 </ion-row>
 
 <ion-content>
   <ion-card>
-    <ion-card-content>
-      <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
+    <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
+      <ion-card-header>
+        <ion-row class="ion-align-items-right">
+          <ion-col size=0 sizeMd=6 sizeLg=8 sizeXl=8></ion-col>
+          <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=4>
+            <ion-button size="small" fill="clear" type="submit" class="ion-no-margin" [disabled]="!editForm.valid"
+              matTooltip="{{'Apply chnages.' | translate }}">
+              <ion-icon slot="icon-only" color="success" name="checkmark-done-circle"></ion-icon>
+            </ion-button>
+            <ion-button size="small" fill="clear" (click)="setNextDefaults()"
+              matTooltip="{{'Set the next default values' | translate }}">
+              <ion-icon slot="icon-only" name="refresh"></ion-icon>
+            </ion-button>
+            <ion-button size="small" fill="clear" (click)="writeConfig()"
+              matTooltip="{{'Write configuration and create installation image.' | translate }}">
+              <ion-icon slot="icon-only" name="server"></ion-icon>
+            </ion-button>
+            <ion-button size="small" fill="clear" href="/isos/{{isourl}}.iso"
+              matTooltip="{{'Download the installation image.' | translate }}">
+              <ion-icon slot="icon-only" name="arrow-down-circle"></ion-icon>
+            </ion-button>
+            <ion-button size="small" fill="clear"href="/configs/{{isourl}}full-connect.sh"
+              matTooltip="{{'Download the setup script.' | translate }}">
+              <ion-icon slot="icon-only" name="download"></ion-icon>
+            </ion-button>
+            <ion-button size="small" fill="clear" (click)="delete($event)"
+              matTooltip="{{'Delete institute.' | translate }}">
+              <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-card-header>
+      <ion-card-content>
         <ion-grid>
           <ion-row>
             <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3 *ngFor="let key of objectKeys;"
@@ -64,14 +97,16 @@
                   value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
                 </ion-datetime>
               </ion-item>
+              <ion-item *ngSwitchCase="'idPipe'">
+                <ion-label position="stacked">{{ key | translate }}</ion-label>
+                <ion-input color="tertiary" type="text" formControlName="{{key}}"
+                  value="{{object[key] | idToName:'customer'}}" readonly>
+                </ion-input>
+              </ion-item>
             </ion-col>
           </ion-row>
         </ion-grid>
-        <div class="ion-padding ion-text-center">
-          <ion-button type="submit" class="ion-no-margin" [disabled]="!editForm.valid">{{ 'apply' | translate }}
-          </ion-button>
-        </div>
-      </form>
-    </ion-card-content>
+      </ion-card-content>
+    </form>
   </ion-card>
 </ion-content>
