--- a/src/app/protected/cephalix/institutes/details/status/institute-status.component.html
+++ b/src/app/protected/cephalix/institutes/details/status/institute-status.component.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-row class="header-row">
   <ion-col size=6>
-    <ion-title>{{'Status of the institutes' | translate}}</ion-title>
+     <ion-title>{{'Status of the institute:' | translate}} {{ object.name }}</ion-title>
   </ion-col>
 </ion-row>
 <ion-content (window:resize)="onResize($event)">
@@ -18,15 +18,6 @@
         <ion-col size="7">
         </ion-col>
         <ion-col size="2">
-          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new institute' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
-          </ion-button>
-          <ion-button size="small" (click)="openActions($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
-            <ion-icon slot="icon-only" name="menu"></ion-icon>
-          </ion-button>
-          <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'select the columns to show' | translate }}">
-            <ion-icon slot="icon-only" name="apps"></ion-icon>
-          </ion-button>
         </ion-col>
       </ion-row>
     </ion-card-header>
