--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -1,18 +1,20 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-row class="header-row">
   <ion-col size=6>
-    <ion-title>{{'Edit tickets' | translate}}</ion-title>
+    <ion-title>{{'Manage tickets' | translate}}</ion-title>
   </ion-col>
 </ion-row>
 <ion-content (window:resize)="onResize($event)">
   <ion-card>
     <ion-card-header>
       <ion-row class="ion-align-items-center">
-        <ion-col size="3">
-          <input matInput placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
-            id="quickFilter">
+        <ion-col size="6">
+          <ion-item>
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter">
+            </ion-input>
+          </ion-item>
         </ion-col>
-        <ion-col size="7">
+        <ion-col size="1">
         </ion-col>
         <ion-col size="2">
           <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new institute' | translate }}">
