--- a/src/app/protected/cranix/groups/details/edit/group-edit.page.html
+++ b/src/app/protected/cranix/groups/details/edit/group-edit.page.html
@@ -12,8 +12,23 @@
 </ion-row>
 <ion-content>
   <ion-card>
-    <ion-card-content>
-      <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
+    <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
+      <ion-card-header>
+        <ion-row class="ion-align-items-center">
+          <ion-col size=0 sizeMd=6 sizeLg=10 sizeXl=10></ion-col>
+          <ion-col size=12 sizeLg=2 sizeXl=2>
+            <ion-button size="small" fill="outline" type="submit" class="ion-no-margin" [disabled]="!editForm.valid"
+              matTooltip="{{'Apply chnages.' | translate }}">
+              <ion-icon slot="icon-only" color="success" name="checkmark-done-circle"></ion-icon>
+            </ion-button>
+            <ion-button size="small" fill="outline" (click)="delete($event)"
+              matTooltip="{{'Delete group.' | translate }}">
+              <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-card-header>
+      <ion-card-content>
         <ion-grid>
           <ion-row>
             <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3 *ngFor="let key of objectKeys;"
@@ -63,11 +78,7 @@
             </ion-col>
           </ion-row>
         </ion-grid>
-        <div class="ion-padding ion-text-center">
-          <ion-button type="submit" class="ion-no-margin" [disabled]="!editForm.valid">{{ 'apply' | translate }}
-          </ion-button>
-        </div>
-      </form>
-    </ion-card-content>
+      </ion-card-content>
+    </form>
   </ion-card>
 </ion-content>
