--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-row class="header-row">
   <ion-col size=6>
-    <ion-title>{{'Edit groups' | translate}}</ion-title>
+    <ion-title>{{'Mnage groups' | translate}}</ion-title>
   </ion-col>
 </ion-row>
 <ion-content (window:resize)="onResize($event)">
@@ -9,19 +9,24 @@
     <ion-card-header>
       <ion-row class="ion-align-items-center">
         <ion-col size="3">
-          <input matInput placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
-            id="quickFilter">
+          <ion-item>
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter">
+            </ion-input>
+          </ion-item>
         </ion-col>
         <ion-col size="7">
         </ion-col>
         <ion-col size="2">
-          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new institute' | translate }}">
+          <ion-button size="small" (click)="redirectToEdit($event,null)"
+            matTooltip="{{'create a new institute' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="openActions($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
+          <ion-button size="small" (click)="openActions($event)"
+            matTooltip="{{'apply actions on the selected objects' | translate }}">
             <ion-icon slot="icon-only" name="menu"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'select the columns to show' | translate }}">
+          <ion-button size="small" (click)="openCollums($event)"
+            matTooltip="{{'select the columns to show' | translate }}">
             <ion-icon slot="icon-only" name="apps"></ion-icon>
           </ion-button>
         </ion-col>
