--- a/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
+++ b/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
@@ -11,9 +11,23 @@
   </ion-col>
 </ion-row>
 <ion-content>
-  <ion-card>
-    <ion-card-content>
-      <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
+  <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
+    <ion-card>
+      <ion-card-header>
+        <ion-row class="ion-align-items-center">
+          <ion-col size=0 sizeMd=6 sizeLg=10 sizeXl=10></ion-col>
+          <ion-col size=12 sizeLg=2 sizeXl=2>
+            <ion-button size="small" type="submit" class="ion-no-margin" [disabled]="!editForm.valid"
+              matTooltip="{{'Apply changes' | translate }}">
+              <ion-icon slot="icon-only" name="checkmark-done-circle"></ion-icon>
+            </ion-button>
+            <ion-button size="small" (click)="cleanUp($event)" matTooltip="{{'Remove arhived images' | translate }}">
+              <ion-icon slot="icon-only" name="remove-circle"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-card-header>
+      <ion-card-content>
         <ion-grid>
           <ion-row>
             <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3 *ngFor="let key of objectKeys;"
@@ -30,8 +44,8 @@
                 <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
                 <!--ion-item *ngIf="editForm.controls[key].hasError('required') && editForm.controls[key].touched"-->
                 <!--ion-label position="stacked"
-                    *ngIf="editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
-                    {{ 'This field is required!' | translate }}</ion-label -->
+                  *ngIf="editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
+                  {{ 'This field is required!' | translate }}</ion-label -->
                 <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
                   <ion-select type="text" formControlName="{{key}}" [compareWith]="objectService.compareFn"
                     [required]="objectService.required[key]">
@@ -62,6 +76,15 @@
               </ion-item>
             </ion-col>
           </ion-row>
+        </ion-grid>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+      </ion-card-header>
+      <ion-title>{{ 'Partitions' | translate}}</ion-title>
+      <ion-card-content>
+        <ion-grid>
           <ion-row *ngFor="let part of object.partitions;">
             <ion-col>
               <ion-item>
@@ -72,32 +95,34 @@
             <ion-col>
               <ion-item>
                 <ion-label position="stacked">{{ 'description' | translate}}</ion-label>
-                <ion-input type="text" formControlName="part-{{part.id}}-description" value="{{part.description}}"></ion-input>
+                <ion-input type="text" formControlName="part-{{part.id}}-description" value="{{part.description}}">
+                </ion-input>
               </ion-item>
             </ion-col>
             <ion-col>
               <ion-item>
                 <ion-label position="stacked">{{ 'OS' | translate}}</ion-label>
                 <ion-select type="text" formControlName="part-{{part.id}}-os" [compareWith]="objectService.compareFn">
-                <ion-select-option *ngFor="let os of  operatingSystems" value="{{os}}">{{os}}</ion-select-option>
+                  <ion-select-option *ngFor="let os of  operatingSystems" value="{{os}}">{{os}}</ion-select-option>
                 </ion-select>
               </ion-item>
             </ion-col>
             <ion-col>
               <ion-item>
                 <ion-label position="stacked">{{'joinType' | translate}}</ion-label>
-                <ion-select type="text" formControlName="part-{{part.id}}-joinType" [compareWith]="objectService.compareFn">
-                <ion-select-option *ngFor="let join of  joinTypes" value="{{join}}">{{join}}</ion-select-option>
-              </ion-select>
+                <ion-select type="text" formControlName="part-{{part.id}}-joinType"
+                  [compareWith]="objectService.compareFn">
+                  <ion-select-option *ngFor="let join of  joinTypes" value="{{join}}">{{join}}</ion-select-option>
+                </ion-select>
               </ion-item>
             </ion-col>
             <ion-col>
               <ion-item>
                 <ion-label position="stacked">{{'cloneTool' | translate}}</ion-label>
                 <ion-select type="text" formControlName="part-{{part.id}}-tool" [compareWith]="objectService.compareFn">
-                <ion-select-option *ngFor="let tool of  tools" value="{{tool}}">{{tool}}</ion-select-option>
-              </ion-select>
-            </ion-item>
+                  <ion-select-option *ngFor="let tool of  tools" value="{{tool}}">{{tool}}</ion-select-option>
+                </ion-select>
+              </ion-item>
             </ion-col>
             <ion-col>
               <ion-item>
@@ -108,11 +133,7 @@
             </ion-col>
           </ion-row>
         </ion-grid>
-        <div class="ion-padding ion-text-center">
-          <ion-button type="submit" class="ion-no-margin" [disabled]="!editForm.valid">{{ 'apply' | translate }}
-          </ion-button>
-        </div>
-      </form>
-    </ion-card-content>
-  </ion-card>
+      </ion-card-content>
+    </ion-card>
+  </form>
 </ion-content>
