--- a/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
+++ b/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
@@ -10,17 +10,25 @@
     </ion-title>
   </ion-col>
 </ion-row>
-<ion-content>
+<ion-content (window:resize)="onResize($event)">
   <ion-card>
-    <ion-card-content>
+    <ion-card-header>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="3">
+          <ion-item>
+            <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
+            id="quickFilter">
+            </ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7">
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content >
       <ion-grid>
         <ion-row>
           <ion-col size=12>
-            <ion-item>
-              <ion-label position="stacked">{{ 'Members of the selected hwconf:' | translate }}</ion-label>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
-                id="memberFilter"></ion-input>
-            </ion-item>
             <ag-grid-angular #agGrid style="width: 100%; height: 200px;" class="ag-theme-balham"
               [gridOptions]="memberOptions" [rowData]="memberData" [columnDefs]="columnDefs" [context]="context"
               [rowSelection]="memberSelection" (gridReady)="onMemberReady($event)"
