--- a/src/app/protected/cranix/users/users.page.html
+++ b/src/app/protected/cranix/users/users.page.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-row class="header-row">
   <ion-col size=6>
-    <ion-title>{{'Edit users' | translate}}</ion-title>
+    <ion-title>{{'Manage users' | translate}}</ion-title>
   </ion-col>
 </ion-row>
 <ion-content (window:resize)="onResize($event)">
@@ -9,8 +9,10 @@
     <ion-card-header>
       <ion-row class="ion-align-items-center">
         <ion-col size="3">
-          <input matInput placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
-            id="quickFilter">
+          <ion-item>
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter">
+            </ion-input>
+          </ion-item>
         </ion-col>
         <ion-col size="7">
         </ion-col>
