--- a/src/app/protected/cranix/users/details/edit/user-edit.page.html
+++ b/src/app/protected/cranix/users/details/edit/user-edit.page.html
@@ -15,7 +15,7 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
+      <form !ngIf="object" [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
         <ion-grid>
           <ion-row>
               <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3 *ngFor="let key of objectKeys;"  [ngSwitch]="objectService.typeOf(key,object,'edit')">
