Implementing user import and institutes sync

--- a/src/app/protected/cephalix/institutes/lists/institutes-lists.page.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-lists.page.html
@@ -12,9 +12,9 @@
         <ion-label>{{ 'Status' | translate}}</ion-label>
       </ion-tab-button>
       
-      <ion-tab-button tab="synced-objects">
+      <ion-tab-button tab="sync">
         <ion-icon name="code-working"></ion-icon>
-        <ion-label>{{ 'Synced objects' | translate}}</ion-label>
+        <ion-label>{{ 'Sync objects' | translate}}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
