--- a/src/app/protected/cranix/users/lists/users-lists.page.html
+++ b/src/app/protected/cranix/users/lists/users-lists.page.html
@@ -6,15 +6,10 @@
         <ion-icon name="list"></ion-icon>
         <ion-label>{{ 'All users' | translate}}</ion-label>
       </ion-tab-button>
-
-      <ion-tab-button tab="edit">
-        <ion-icon name="create"></ion-icon>
-        <ion-label>{{ 'edit' | translate}}</ion-label>
-      </ion-tab-button>
-  
-      <ion-tab-button tab="groups">
-        <ion-icon name="people"></ion-icon>
-        <ion-label>{{ 'groups' | translate}}</ion-label>
+      <ion-tab-button tab="import">
+        <ion-icon name="receipt"></ion-icon>
+        <ion-label>{{ 'Import users' | translate}}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
-  </ion-tabs>
+</ion-tabs>
+
