--- a/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
+++ b/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
@@ -1,3 +1,30 @@
-<p>
-  institute-synced-objects works!
-</p>
+<cranix-toolbar></cranix-toolbar>
+<ion-row class="header-row">
+  <ion-col size=12>
+    <ion-title>{{ 'List of synchronized objects in the selected institute:' | translate}} {{institute.name}}
+    </ion-title>
+  </ion-col>
+</ion-row>
+<ion-content (window:resize)="onResize($event)">
+  <ion-card>
+    <ion-card-header>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="3">
+          <ion-item>
+            <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="memberFilter">
+            </ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="7">
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content>
+      <ag-grid-angular #agGrid style="width: 100%; height: 450px;" class="ag-theme-balham"
+        [gridOptions]="memberOptions" [rowData]="memberData" [columnDefs]="columnDefs" [context]="context"
+        [rowSelection]="memberSelection" (gridReady)="onMemberReady($event)"
+        (selectionChanged)="onMemberSelectionChanged()" id="memberTable" [autoGroupColumnDef]="autoGroupColumnDef">
+      </ag-grid-angular>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
