--- a/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
+++ b/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>edit</ion-title>
-  </ion-toolbar>
-</ion-header>
+<cranix-toolbar></cranix-toolbar>
 <ion-row class="header-row">
   <ion-col size=12>
     <ion-title>{{ 'Start clone members of selected hwconf:' | translate}} "{{hwconf.name}}" {{hwconf.description}}
@@ -16,8 +12,7 @@
       <ion-row class="ion-align-items-center">
         <ion-col size="3">
           <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
-            id="quickFilter">
+            <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="quickFilter">
             </ion-input>
           </ion-item>
         </ion-col>
@@ -25,18 +20,12 @@
         </ion-col>
       </ion-row>
     </ion-card-header>
-    <ion-card-content >
-      <ion-grid>
-        <ion-row>
-          <ion-col size=12>
-            <ag-grid-angular #agGrid style="width: 100%; height: 200px;" class="ag-theme-balham"
-              [gridOptions]="memberOptions" [rowData]="memberData" [columnDefs]="columnDefs" [context]="context"
-              [rowSelection]="memberSelection" (gridReady)="onMemberReady($event)"
-              (selectionChanged)="onMemberSelectionChanged()" id="memberTable" [autoGroupColumnDef]="autoGroupColumnDef">
-            </ag-grid-angular>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+    <ion-card-content>
+      <ag-grid-angular #agGrid style="width: 100%; height: 200px;" class="ag-theme-balham" [gridOptions]="memberOptions"
+        [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="memberSelection"
+        (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable"
+        [autoGroupColumnDef]="autoGroupColumnDef">
+      </ag-grid-angular>
     </ion-card-content>
   </ion-card>
 </ion-content>
