Implementing old user import with ion-list

--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-row class="header-row">
   <ion-col size=6>
-    <ion-title>{{'Mnage groups' | translate}}</ion-title>
+    <ion-title>{{'Manage groups' | translate}}</ion-title>
   </ion-col>
 </ion-row>
 <ion-content (window:resize)="onResize($event)">
