--- a/src/app/protected/protected.page.html
+++ b/src/app/protected/protected.page.html
@@ -1,4 +1,5 @@
-<ion-menu start=side contentId="main-content" type=overlay >
+<ion-split-pane contentId="main-content">
+	<ion-menu start=side contentId="main-content" type=overlay >
   <ion-content>
     <ion-list id="menu">
       <ion-list-header>
@@ -21,3 +22,4 @@
   </ion-content>
 </ion-menu>
 <ion-router-outlet id="main-content"></ion-router-outlet>
+</ion-split-pane>
