--- a/src/app/protected/protected.page.scss
+++ b/src/app/protected/protected.page.scss
@@ -1,11 +1,11 @@
 ion-menu {
     --ion-background-color: var(--ion-color-primary);
     --ion-text-color: var(--ion-color-primary-contrast);
+    max-width: 200px;
   
     ion-toolbar {
       --background: var(--ion-color-primary);
     }
-  
     ion-list {/* optional, but it needs when you use gradient as a background color.*/
       background: transparent;
     }
