--- a/src/app/shared/actions/show-import/show-import.component.html
+++ b/src/app/shared/actions/show-import/show-import.component.html
@@ -1,16 +1,36 @@
+<ion-header>
+  <ion-card>
+    <ion-toolbar>
+      <ion-card-title>{{import.startTime}} {{'role' | translate}}: {{import.role | translate}}</ion-card-title>
+      <ion-buttons slot="end">
+        <ion-button fill="clear" size="small" (click)="closeWindow()">
+          <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+    <ion-toolbar>
+      <ion-card-subtitle>
+        {{ 'indentifier' | translate }}: {{import.identifier | translate}};
+        {{'password' | translate}}: "{{import.password}}";
+        {{'mustChange' | translate}}: {{import.mustchange}};
+        {{'full import' | translate}}:  {{import.full}};
+        {{'allClasses' | translate}}: {{import.allClasses}};
+        {{'cleanDirs' | translate}}: {{import.cleanClassDirs}};
+        {{'resetPW' | translate}}:  {{import.resetPassword}};
+        {{'appendBirthdayToPassword' | translate}}: {{import.appendBirthdayToPassword}}
+      </ion-card-subtitle>
+    </ion-toolbar>
+  </ion-card>
+</ion-header>
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>{{import.startTime}}</ion-card-title>
       <ion-card-subtitle>
-          indentifier: {{import.identifier}} password: {{import.password}} mustChange: {{import.mustchange}} full:
-          {{import.full}} allClasses: {{import.allClasses}} cleanDirs: {{import.cleanClassDirs}} resetPW:
-          {{import.resetPassword}}
+        {{'content of the log' | translate}}
       </ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-       <div [innerHTML]="import.result"></div>
+      <div [innerHTML]="import.result"></div>
     </ion-card-content>
   </ion-card>
 </ion-content>
-
