Fix a lot of error for real build

--- a/src/app/protected/cephalix/tickets/details/details.page.html
+++ b/src/app/protected/cephalix/tickets/details/details.page.html
@@ -4,7 +4,7 @@
     <ion-card-header>
       <ion-card-title>{{ticket.title}}</ion-card-title>
       <ion-card-subtitle> {{ticket.recDate | date:'yy-MM-dd HH:mm'}} {{ticket.email}}:
-        {{ticket.lastname}},{{ticket.givenname}}</ion-card-subtitle>
+        {{ticket.lastname}},{{ticket.firstname}}</ion-card-subtitle>
     </ion-card-header>
   </ion-card>
 
