--- a/src/app/protected/cranix/devices/details/edit/device-edit.page.html
+++ b/src/app/protected/cranix/devices/details/edit/device-edit.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 <ion-row class="header-row">
   <ion-col size=12>
-    <ion-title color="primary">{{ 'Modify selected device' | translate}}: "{{object.name}}" {{object.description}}
+    <ion-title color="primary">{{ 'Modify selected device' | translate}}: "{{object.name}}"
       {{ 'room' | translate }}: {{object.roomId | idToName:'room' }}
     </ion-title>
   </ion-col>
@@ -21,7 +21,7 @@
               matTooltip="{{'Apply chnages.' | translate }}">
               <ion-icon slot="icon-only" color="success" name="checkmark-done-circle"></ion-icon>
             </ion-button>
-            <ion-button size="small" fill="outline" (click)="delete($event)"
+            <ion-button size="small" fill="outline" (click)="delete()"
               matTooltip="{{'Delete group.' | translate }}">
               <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
             </ion-button>
@@ -74,6 +74,24 @@
                 <ion-datetime formControlName="{{key}}" max="2100"
                   value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
                 </ion-datetime>
+              </ion-item>
+              <ion-item *ngSwitchCase="'idPipe'">
+                <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
+                <ion-label position="stacked"
+                  *ngIf="editForm.controls[key] && editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
+                  {{ 'This field is required!' | translate }}</ion-label>
+                <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
+                  <ion-select type="text" formControlName="{{key}}" [compareWith]="objectService.compareFn"
+                    [required]="objectService.required[key]">
+                    <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
+                      {{option | idToName:objectService.idToPipe(key)}}</ion-select-option>
+                  </ion-select>
+                </ng-template>
+                <ng-template #elseBlock>
+                  <ion-input type="text" formControlName="{{key}}"
+                    value="{{object[key] | idToName:objectService.idToPipe(key) }}"
+                    [required]="objectService.required[key]"></ion-input>
+                </ng-template>
               </ion-item>
             </ion-col>
           </ion-row>
