--- a/src/app/protected/cranix/users/details/groups/user-groups.page.html
+++ b/src/app/protected/cranix/users/details/groups/user-groups.page.html
@@ -39,7 +39,7 @@
           <ion-col size=12 sizeMd=12 sizeLg=5 sizeXl=5>
             <ion-item>
               <ion-label position="stacked">{{ 'Available groups:' | translate }}</ion-label>
-              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onNonMemberFilterChanged()"
+              <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onNoMemberFilterChanged()"
                 id="nonMemberFilter">
               </ion-input>
             </ion-item>
