--- a/src/app/shared/actions/show-import/show-import.component.html
+++ b/src/app/shared/actions/show-import/show-import.component.html
@@ -12,7 +12,7 @@
       <ion-card-subtitle>
         {{ 'indentifier' | translate }}: {{import.identifier | translate}};
         {{'password' | translate}}: "{{import.password}}";
-        {{'mustChange' | translate}}: {{import.mustchange}};
+        {{'mustChange' | translate}}: {{import.mustChange}};
         {{'full import' | translate}}:  {{import.full}};
         {{'allClasses' | translate}}: {{import.allClasses}};
         {{'cleanDirs' | translate}}: {{import.cleanClassDirs}};
