--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -14,14 +14,15 @@
             </ion-input>
           </ion-item>
         </ion-col>
-        <ion-col size=0 sizeMd=0 sizeLg=7 sizeXl=7>
+        <ion-col size=0 sizeMd=0 sizeLg=6 sizeXl=6>
         </ion-col>
-        <ion-col size="2">
-          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new customer' | translate }}">
+        <ion-col size="3">
+          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'Create a new customer' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="openActions($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
-            <ion-icon slot="icon-only" name="menu"></ion-icon>
+          <ion-button size="small" (click)="redirectToAddInstitute($event)"  matTooltip="{{'Create a new institute for the selected customer' | translate }}">
+            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+            <ion-icon slot="icon-only" name="business"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'select the columns to show' | translate }}">
             <ion-icon slot="icon-only" name="apps"></ion-icon>
