--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -1,5 +1,4 @@
-
-  <ion-header translucent>
+<ion-header translucent>
   <ion-toolbar>
     <ion-title>{{  objectActionTitle | translate }}</ion-title>
     <ion-buttons slot="end">
@@ -11,52 +10,78 @@
 </ion-header>
 <ion-content fullscreen>
   <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
-    <ion-list lines="full" class="ion-no-margin ion-no-padding" *ngFor="let key of objectKeys" [ngSwitch]="objectService.typeOf(key,object,objectAction)">
-      <ion-item *ngSwitchCase="'booleanTrue'">
-        <ion-label position="stacked">{{ key | translate }}</ion-label>
-        <ion-toggle slot="end" formControlName="{{key}}" color="secondary" checked></ion-toggle>
-      </ion-item>
-      <ion-item *ngSwitchCase="'booleanFalse'">
-        <ion-label position="stacked">{{ key | translate }}</ion-label>
-        <ion-toggle slot="end" formControlName="{{key}}" color="secondary"></ion-toggle>
-      </ion-item>
-      <ion-item *ngSwitchCase="'string'">
-        <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
-        <!--ion-item *ngIf="editForm.controls[key].hasError('required') && editForm.controls[key].touched"-->
-        <ion-label position="stacked" *ngIf="editForm.controls[key] && editForm.controls[key].hasError('required')  && editForm.controls[key].touched">{{ 'This field is required!' | translate }}</ion-label>
-        <ng-template [ngIf]="objectService.selects[key]"  [ngIfElse]="elseBlock">
-            <ion-select type="text" formControlName="{{key}}"  [compareWith]="objectService.compareFn" [required]="objectService.required[key]">
-            <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">{{option | translate}}</ion-select-option>
-          </ion-select>
-        </ng-template>
-        <ng-template #elseBlock>
-          <ion-input type="text" formControlName="{{key}}" value="{{object[key]}}" [required]="objectService.required[key]"></ion-input>
-        </ng-template>
-      </ion-item>
-      <ion-item *ngSwitchCase="'stringRO'">
-        <ion-label position="stacked">{{ key | translate }}</ion-label>
-        <ion-input color="tertiary" type="text" formControlName="{{key}}" value="{{object[key]}}" readonly></ion-input>
-      </ion-item>
-      <ion-item *ngSwitchCase="'text'" lines="none">
-        <ion-label position="stacked">{{ key | translate }}</ion-label>
-        <ion-textarea color="tertiary" autoGrow="true" formControlName="{{key}}" value="{{object[key]}}" >
-        </ion-textarea>
-      </ion-item>
-      <ion-item *ngSwitchCase="'date'">
-        <ion-label position="stacked">{{ key | translate }}</ion-label>
-        <ion-datetime formControlName="{{key}}" cancel-text="{{ 'cancel' | translate }}" displayFormat="YYYY-MM-DD"
-          done-text="{{'apply' | translate }}" max="2100" value="{{object[key] | date:'yyyy-MM-dd'}}"></ion-datetime>
-      </ion-item>
-      <ion-item *ngSwitchCase="'date-time'">
-        <ion-label position="stacked">{{ key | translate }}</ion-label>
-        <ion-datetime formControlName="{{key}}" cancel-text="{{ 'cancel' | translate }}" displayFormat="YYYY-MM-DD HH:mm"
-          done-text="{{'apply' | translate }}" max="2100" value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
-        </ion-datetime>
-      </ion-item>
+    <ion-list lines="full" class="ion-no-margin ion-no-padding">
+      <div *ngFor=" let key of objectKeys" [ngSwitch]="objectService.typeOf(key,object,objectAction)">
+        <ion-item *ngSwitchCase="'booleanTrue'">
+          <ion-label position="stacked">{{ key | translate }}</ion-label>
+          <ion-toggle slot="end" formControlName="{{key}}" color="secondary" checked></ion-toggle>
+        </ion-item>
+        <ion-item *ngSwitchCase="'booleanFalse'">
+          <ion-label position="stacked">{{ key | translate }}</ion-label>
+          <ion-toggle slot="end" formControlName="{{key}}" color="secondary"></ion-toggle>
+        </ion-item>
+        <ion-item *ngSwitchCase="'string'">
+          <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
+          <ion-label position="stacked"
+            *ngIf="editForm.controls[key] && editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
+            {{ 'This field is required!' | translate }}</ion-label>
+          <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
+            <ion-select type="text" formControlName="{{key}}" [compareWith]="objectService.compareFn"
+              [required]="objectService.required[key]">
+              <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
+                {{option | translate}}</ion-select-option>
+            </ion-select>
+          </ng-template>
+          <ng-template #elseBlock>
+            <ion-input type="text" formControlName="{{key}}" value="{{object[key]}}"
+              [required]="objectService.required[key]"></ion-input>
+          </ng-template>
+        </ion-item>
+        <ion-item *ngSwitchCase="'stringRO'">
+          <ion-label position="stacked">{{ key | translate }}</ion-label>
+          <ion-input color="tertiary" type="text" formControlName="{{key}}" value="{{object[key]}}" readonly>
+          </ion-input>
+        </ion-item>
+        <ion-item *ngSwitchCase="'text'" lines="none">
+          <ion-label position="stacked">{{ key | translate }}</ion-label>
+          <ion-textarea color="tertiary" autoGrow="true" formControlName="{{key}}" value="{{object[key]}}">
+          </ion-textarea>
+        </ion-item>
+        <ion-item *ngSwitchCase="'date'">
+          <ion-label position="stacked">{{ key | translate }}</ion-label>
+          <ion-datetime formControlName="{{key}}" cancel-text="{{ 'cancel' | translate }}" displayFormat="YYYY-MM-DD"
+            done-text="{{'apply' | translate }}" max="2100" value="{{object[key] | date:'yyyy-MM-dd'}}"></ion-datetime>
+        </ion-item>
+        <ion-item *ngSwitchCase="'date-time'">
+          <ion-label position="stacked">{{ key | translate }}</ion-label>
+          <ion-datetime formControlName="{{key}}" cancel-text="{{ 'cancel' | translate }}"
+            displayFormat="YYYY-MM-DD HH:mm" done-text="{{'apply' | translate }}" max="2100"
+            value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
+          </ion-datetime>
+        </ion-item>
+        <ion-item *ngSwitchCase="'idPipe'">
+          <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
+          <ion-label position="stacked"
+            *ngIf="editForm.controls[key] && editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
+            {{ 'This field is required!' | translate }}</ion-label>
+          <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
+            <ion-select type="text" formControlName="{{key}}" [compareWith]="objectService.compareFn"
+              [required]="objectService.required[key]">
+              <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
+                {{option | idToName:objectService.idToPipe(key)}}</ion-select-option>
+            </ion-select>
+          </ng-template>
+          <ng-template #elseBlock>
+            <ion-input type="text" formControlName="{{key}}"
+              value="{{object[key] | idToName:objectService.idToPipe(key) }}" [required]="objectService.required[key]">
+            </ion-input>
+          </ng-template>
+        </ion-item>
+      </div>
     </ion-list>
     <div class="ion-padding ion-text-center">
-      <ion-button type="submit" class="ion-no-margin" [disabled]="!editForm.valid">{{ objectAction | translate }}</ion-button>
+      <ion-button type="submit" class="ion-no-margin" [disabled]="!editForm.valid">{{ objectAction | translate }}
+      </ion-button>
     </div>
   </form>
 </ion-content>
-
