--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -58,10 +58,14 @@
  */
 
 #carded {
+
+--background : #f5f5f5;
+
 ion-card {
     //flex-grow: 1;
     height: 93%;
     display: grid;
+    
     grid-template-rows: 12%;
     ion-card-header{
         grid-row: 1/2;
@@ -74,4 +78,5 @@ ion-card {
     overflow: hidden;
     }  
   }
+
 }
