--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -1,10 +1,23 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
-  <ion-col size=6>
+
+<ion-content id="carded">
+  <ion-row class="header-row">
+  <ion-col>
     <ion-title>{{'Status of the institutes' | translate}}</ion-title>
   </ion-col>
 </ion-row>
-<ion-content (window:resize)="onResize($event)">
+<ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+  <ion-fab-button>
+    <ion-icon name="arrow-forward-circle"></ion-icon>
+  </ion-fab-button>
+  <ion-fab-list side="start">
+    <ion-fab-button><ion-icon name="menu" (click)="openActions($event)"></ion-icon></ion-fab-button>
+    <ion-fab-button><ion-icon name="add-circle-outline" (click)="redirectToEdit($event,null)"></ion-icon></ion-fab-button>
+    <ion-fab-button><ion-icon name="apps" (click)="openCollums($event)"></ion-icon></ion-fab-button>
+
+  </ion-fab-list>
+</ion-fab>
+
   <ion-card>
     <ion-card-header>
       <ion-row class="ion-align-items-center">
@@ -15,9 +28,8 @@
             </ion-input>
           </ion-item>
         </ion-col>
-        <ion-col size="7">
-        </ion-col>
-        <ion-col size="2">
+       
+        <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
           <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new institute' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
