--- a/src/app/protected/protected.page.html
+++ b/src/app/protected/protected.page.html
@@ -1,11 +1,11 @@
 <ion-split-pane contentId="main-content">
-	<ion-menu start=side contentId="main-content" type=overlay >
+	<ion-menu start=side contentId="main-content" type=overlay>
   <ion-content>
     <ion-list id="menu">
       <ion-list-header>
         <ion-item lines="none">
           <ion-thumbnail>
-            <img src="assets/images/logo/cranix_school.svg">
+              <img (click)="toggleMenu()" src="assets/images/logo/cranix_school.svg">
           </ion-thumbnail>
           <ion-label>
             <h3>CRANIX</h3>
