--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -33,8 +33,14 @@
     //justify-content: center; /* align horizontal */
     align-items: center;
     text-overflow: ellipsis;
+    border-right: 0px!important;
+    border-left-width: 0px!important;
 }
 
+
+.ag-theme-material .ag-header-cell {
+ background-color: rgba(189, 195, 199, 0.5);
+}
 .ag-theme-material .ag-icon-checkbox-unchecked{    
     font-size: 15px;
 }
@@ -58,24 +64,39 @@
  */
 
 #carded {
-
+margin-top: 5px;
 --background : #f5f5f5;
 
+.header-row{
+    padding-top: 6px;
+    height: 33px;
+    //justify-content: center;
+    //align-content: flex-start;
+}
 ion-card {
     //flex-grow: 1;
     height: 93%;
     display: grid;
-    
     grid-template-rows: 12%;
     ion-card-header{
         grid-row: 1/2;
         height: 100%;
+       /* border-style: ridge;
+        border-top: none;
+        border-left: none;
+        border-right: none;*/
     }
     ion-card-content {
+    padding-top: 3px;  
     grid-row: 2/2;
     height: 100%;
     grid-column: 1/1;
     overflow: hidden;
+    border-style: ridge;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    border-width: 1px;
     }  
   }
 
