Setting default values by creating a new institute. Show only customer attributes in institutes if cutsomer.manage is allowed.

--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -2,6 +2,9 @@
   <ion-toolbar>
     <ion-title>{{  objectActionTitle | translate }}</ion-title>
     <ion-buttons slot="end">
+      <ion-button *ngIf="objectType == 'institute'" fill="clear" size="small" (click)="setNextDefaults()" matTooltip="{{'Set the next default values' | translate }}" disabled="{{editForm.disabled}}">
+        <ion-icon slot="icon-only" name="refresh"></ion-icon>
+      </ion-button>
       <ion-button fill="clear" size="small" (click)="closeWindow()" disabled="{{editForm.disabled}}">
         <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
       </ion-button>
