New page to manage devies in room

--- a/src/app/protected/cranix/rooms/details/room-details.page.html
+++ b/src/app/protected/cranix/rooms/details/room-details.page.html
@@ -6,6 +6,11 @@
         <ion-icon name="create"></ion-icon>
         <ion-label>{{ 'edit' | translate}}</ion-label>
       </ion-tab-button>
+    
+      <ion-tab-button tab="devices">
+        <ion-icon name="desktop"></ion-icon>
+        <ion-label>{{ 'devices' | translate}}</ion-label>
+      </ion-tab-button>
   
       <ion-tab-button tab="printers">
         <ion-icon name="print"></ion-icon>
