Warning if no object was selected.

--- a/src/app/protected/cranix/devices/devices.page.html
+++ b/src/app/protected/cranix/devices/devices.page.html
@@ -17,7 +17,7 @@
         <ion-col size="7">
         </ion-col>
         <ion-col size="2">
-          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new institute' | translate }}">
+          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new device' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openActions($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
