--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -30,12 +30,12 @@
 
  .ag-row .ag-cell {
     display: flex;
-    //justify-content: center; /* align horizontal */
+    //justify-content: center; /* align horizontal *
     align-items: center;
     text-overflow: ellipsis;
     border-right: 0px!important;
     border-left-width: 0px!important;
-}
+} 
 
 
 .ag-theme-material .ag-header-cell {
